# ld31

./: Cargo.toml  LICENSE  README.md
assets/: palm_trees.txt  rocks.txt  sea_birds.txt  stream.txt
assets/background.band/: projectData
assets/background.band/Output/: arrange_screenshot.tiff  metadata.plist
src/: blood.rs  blood_bar.rs  game.rs  main.rs  palm_trees.rs  player.rs  render.rs  rocks.rs  sea_birds.rs  settings.rs  stream.rs
