[package]

name = "seabirdsbreakfast"
version = "0.0.1"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]

[dependencies.piston]

git = "https://github.com/pistondevelopers/piston"

[dependencies.sdl2_mixer]

git = "https://github.com/bvssvni/rust-sdl2_mixer"
brach = "gitdev"

[dependencies.sdl2]

git = "https://github.com/AngryLawyer/rust-sdl2"

[features]

ship = []

