[package]

name = "seabirdsbreakfast"
version = "0.0.1"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]

[dependencies.piston]

git = "https://github.com/pistondevelopers/piston"

[dependencies.sdl2_mixer]

git = "https://github.com/bvssvni/rust-sdl2_mixer"
branch = "gitdev"
#git = "https://github.com/andelf/rust-sdl2_mixer"

[features]

ship = []

[profile.dev]

opt-level = 2

